examples/non-examples/type-errors/not-a-function.kl
#lang "prelude.kl"

(example (42 4 2))
